syntax = "proto3";

option csharp_namespace = "GrpcGreeter.Protos";
import "Protos/empty.proto";
import "Protos/skillCRUD.proto";

package protos.userCRUD;

service UserCRUD {
  rpc GetUsers (empty.Empty) returns (Users);
  rpc GetByID (UserFilter) returns (User);
  rpc GetByFilter (UserFilter) returns (Users);
  rpc Insert (User) returns (empty.Empty);
  rpc Update (User) returns (empty.Empty);
  rpc Delete (UserFilter) returns (empty.Empty);
}

message User {
  string firstName = 1;
  string lastName = 2;
  string id = 3;
  int32 age = 4;
  string username = 5;
  string password = 6;
  skillCRUD.Skill skill = 7;
  string accountId = 8;
  UserProtoType userType = 9;
}

enum UserProtoType{
  USER = 0;
  ADMIN = 1;
}

message Users {
  repeated User items = 1;
}

message UserFilter{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  int32 age = 4;
  string username = 5;
  string password = 6;
  skillCRUD.Skill skill = 7;
  string accountId = 8;
  UserProtoType userType = 9;
}